Add possibility of entering a custom name list